--- a/frontend/src/modules/dashboard/index.css
+++ b/frontend/src/modules/dashboard/index.css
@@ -4,7 +4,7 @@
     display: block;
     justify-content: left;
     align-items: left;
-    background-image: url('assets/background4.webp');
+    background-image: url('../../assets/background4.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
