--- a/frontend/src/modules/login/index.css
+++ b/frontend/src/modules/login/index.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('assets/background4.webp');
+  background-image: url('../../assets/background4.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
