--- a/frontend/src/modules/dashboard/index.css
+++ b/frontend/src/modules/dashboard/index.css
@@ -1,14 +1,9 @@
-/* body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #333;
-    display: block;
-    justify-content: left;
-    align-items: left;
-    background-image: url('../../assets/background4.webp');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    margin: 0;
-    color: #fff;
-} */
+#logo {
+    margin-left: 5%;
+    height: 40%;
+    width: 40%;
+}
+
+#top-navigation {
+    width: 97.5%;
+}
