--- a/frontend/src/modules/home/index.css
+++ b/frontend/src/modules/home/index.css
@@ -120,9 +120,9 @@ body {
 
 .logo {
   position: absolute;
-  top: 20px;
-  left: 20px;
-  width: 120px;
+  top: 4%;
+  left: 0px;
+  width: auto;
   height: auto;
   font-size: 50px;
   font-weight: 700;
